# economic-indicator

./: README.md  Taskfile.yml  pyproject.toml
docker/: docker-compose.yml
economic_indicator/: create_tables.py  database.py  import_data.py  render.py
